# gammalgebra

./: CMakeLists.txt  LICENSE  main.cpp
include/tmx/: tmx.hpp
include/tmx/internal/: definitions.hpp  hash.hpp  setup.hpp  type_quat.hpp  type_quat.inl  type_vec.hpp  type_vec.inl
include/tmx/internal/compute/: compute_vec.hpp
include/tmx/internal/deprecated/: compute_dual_exponential.inl  compute_dual_geometric.inl  compute_dual_interpolation.inl  dual_exponential.hpp  dual_geometric.hpp  dual_interpolation.hpp  dualquat_type.hpp  type_dualquat.hpp  type_dualquat.inl
include/tmx/internal/mat/: compute_rotation.inl  compute_scale.inl  compute_transform.inl  type_mat2x2.hpp  type_mat2x2.inl  type_mat3x3.hpp  type_mat3x3.inl  type_mat4x4.hpp  type_mat4x4.inl
include/tmx/internal/math/: compute_common.inl  compute_exponential.inl  compute_interpolation.inl
include/tmx/internal/quat/: compute_angle.inl  compute_euler.inl  compute_exponential.inl  compute_geometric.inl  compute_interpolation.inl  compute_rotation.inl
include/tmx/internal/simd/: mat_geometric.inl  mat_inverse.inl  vec_geometric.inl
include/tmx/internal/vec/: compute_common.inl  compute_exponential.inl  compute_geometric.inl  compute_interpolation.inl  compute_relational.inl  compute_trigonometric.inl  type_vec2.inl
include/tmx/mat/: rotation.hpp  scale.hpp  transform.hpp
include/tmx/math/: common.hpp  constants.hpp  exponential.hpp  interpolation.hpp
include/tmx/quat/: angle.hpp  euler.hpp  exponential.hpp  functions.hpp  geometric.hpp  interpolation.hpp  rotation.hpp
include/tmx/vec/: casting.hpp  common.hpp  exponential.hpp  functions.hpp  geometric.hpp  interpolation.hpp  relational.hpp  trigonometric.hpp  util.hpp  vec2_type.hpp
